--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
-
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-/.idea
-*.iml
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -26,6 +12,7 @@ out/
 
 # misc
 .DS_Store
+.idea
 .env.local
 .env.development.local
 .env.test.local
