--- a/package.json
+++ b/package.json
@@ -1,38 +1,92 @@
 {
-  "name": "mlt-language-support-front",
-  "version": "0.1.0",
+  "name": "@coreui/coreui-free-react-admin-template",
+  "version": "2.1.3",
+  "description": "Developed by Ceyentra Technologies",
+  "author": "Kavinda Dilshan",
+  "homepage": "/admin",
+  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
+  "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@coreui/coreui": "^2.1.5",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
+    "@coreui/icons": "0.3.0",
+    "@coreui/react": "^2.1.3",
+    "@syncfusion/ej2-react-calendars": "^19.1.56",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
+    "classnames": "^2.2.6",
+    "core-js": "^2.6.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "flag-icon-css": "^3.2.1",
+    "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
+    "multiselect-react-dropdown": "^1.6.11",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.6.2",
+    "qs": "^6.10.1",
+    "react": "^16.7.0",
+    "react-app-polyfill": "^0.2.0",
+    "react-chartjs-2": "^2.7.4",
+    "react-circular-progressbar": "^2.0.4",
+    "react-csv": "^2.0.3",
+    "react-dom": "^16.7.0",
+    "react-dropzone": "^11.3.2",
+    "react-easy-crop": "^3.3.2",
+    "react-flags-select": "^2.1.2",
+    "react-loadable": "^5.5.0",
+    "react-progress-bar-plus": "^1.3.1",
+    "react-reactstrap-pagination": "^2.0.3",
+    "react-redux": "^7.2.0",
+    "react-router-config": "^4.4.0-beta.6",
+    "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.10.6",
+    "react-test-renderer": "^16.7.0",
+    "react-world-flags": "^1.4.0",
+    "reactstrap": "^7.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reprogressbars": "^1.0.1",
+    "simple-line-icons": "^2.4.1",
+    "sweetalert": "^2.1.2",
+    "toastr": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:cov": "react-scripts test --coverage",
+    "test:debug": "react-scripts --inspect-brk test --runInBand",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "bugs": {
+    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 9",
+    "not op_mini all"
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/*index.js",
+      "!src/serviceWorker.js",
+      "!src/polyfill.js"
     ]
   }
 }
