--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.5",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.1.3",
     "@syncfusion/ej2-react-calendars": "^19.1.56",
     "axios": "^0.21.1",
     "bootstrap": "^4.2.1",
-    "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "core-js": "^2.6.1",
     "enzyme": "^3.8.0",
@@ -27,39 +25,29 @@
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
-    "moment": "^2.29.1",
-    "multiselect-react-dropdown": "^1.6.11",
     "node-sass": "^4.14.1",
     "prop-types": "^15.6.2",
     "qs": "^6.10.1",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
-    "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^2.0.4",
-    "react-csv": "^2.0.3",
     "react-dom": "^16.7.0",
     "react-dropzone": "^11.3.2",
     "react-easy-crop": "^3.3.2",
-    "react-flags-select": "^2.1.2",
     "react-loadable": "^5.5.0",
     "react-progress-bar-plus": "^1.3.1",
     "react-reactstrap-pagination": "^2.0.3",
-    "react-redux": "^7.2.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "react-spinners": "^0.10.6",
-    "react-test-renderer": "^16.7.0",
-    "react-world-flags": "^1.4.0",
     "reactstrap": "^7.0.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "reprogressbars": "^1.0.1",
     "simple-line-icons": "^2.4.1",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "cheerio": "=1.0.0-rc.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -68,9 +56,6 @@
     "test:cov": "react-scripts test --coverage",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
     "eject": "react-scripts eject"
-  },
-  "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
   "eslintConfig": {
     "extends": "react-app"
