--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
-  "version": "2.1.3",
-  "description": "Developed by Ceyentra Technologies",
-  "author": "Kavinda Dilshan",
+  "name": "mlt-language-support-front",
+  "version": "0.1.0",
   "homepage": "/admin",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
-  },
   "dependencies": {
     "@coreui/coreui": "^2.1.5",
-    "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.1.3",
     "@syncfusion/ej2-react-calendars": "^19.1.56",
     "axios": "^0.21.1",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
-    "core-js": "^2.6.1",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.6.2",
     "qs": "^6.10.1",
     "react": "^16.7.0",
-    "react-app-polyfill": "^0.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^16.7.0",
     "react-dropzone": "^11.3.2",
     "react-easy-crop": "^3.3.2",
     "react-loadable": "^5.5.0",
     "react-progress-bar-plus": "^1.3.1",
-    "react-reactstrap-pagination": "^2.0.3",
-    "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "react-spinners": "^0.10.6",
     "reactstrap": "^7.0.2",
-    "simple-line-icons": "^2.4.1",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4"
   },
